[package]
name = "scrapster"
version = "0.1.0"
edition = "2024"

[dependencies]
glob = "0.3.3"
tokio = { version = "1.48.0", features = ["full"] }
rppal = { version = "0.17", optional = true }
dht-sensor = { version = "0.2", optional = true }
embedded-hal = { version = "0.2.7", features = ["unproven"], optional = true }
anyhow = { version = "1.0", optional = true }

[features]
default = []
pi = ["rppal", "dht-sensor", "embedded-hal", "anyhow"]
